force-app/main/default/objects/Finance_Partner_Quote__c/Finance_Partner_Quote__c.object-meta.xml
<CustomObject>
    <label>Finance Partner Quote</label>
    <nameField>
        <displayFormat>FPQ-{00000}</displayFormat>
        <label>FPQ Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Finance Partner Quotes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>