force-app/main/default/objects/Finance_Partner_Quote__c/fields/Additional_Deferral_Decision__c.field-meta.xml
<CustomField>
    <fullName>Additional_Deferral_Decision__c</fullName>
    <description>GTMS-15999: Created as part of 3PF project.</description>
    <label>Additional Deferral Decision</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>