force-app/main/default/objects/Finance_Partner_Quote__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <label>Customer Billing Address</label>
    <type>TextArea</type>
</CustomField>