force-app/main/default/objects/Finance_Partner_Quote__c/fields/Applied_for_Internal_Financing__c.field-meta.xml
<CustomField>
    <fullName>Applied_for_Internal_Financing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Applied for Internal Financing</label>
    <type>Checkbox</type>
</CustomField>