force-app/main/default/objects/Finance_Partner_Quote__c/fields/Balance_Due__c.field-meta.xml
<CustomField>
    <fullName>Balance_Due__c</fullName>
    <description>GTMS-16419: Updated field label, Help Text, Length and Decimal places</description>
    <inlineHelpText>Opportunity TCV. Changes require 3PF re-review; please resubmit for approval after updating.</inlineHelpText>
    <label>Requested Amount (TCV)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>