force-app/main/default/objects/Finance_Partner_Quote__c/fields/CPQ_Quote__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CPQ Quote</label>
    <referenceTo>SBQQ__Quote__c</referenceTo>
    <relationshipLabel>Finance Partner Quotes</relationshipLabel>
    <relationshipName>Finance_Partner_Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>