force-app/main/default/objects/Finance_Partner_Quote__c/fields/Customer_Contact__c.field-meta.xml
<CustomField>
    <fullName>Customer_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>GTMS-15999: Created as part of 3PF phase 2 project on 1/8/24</description>
    <label>Customer Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Finance Partner Quotes (Customer Contact)</relationshipLabel>
    <relationshipName>Finance_Partner_Quotes1</relationshipName>
    <type>Lookup</type>
</CustomField>