force-app/main/default/objects/Finance_Partner_Quote__c/fields/Customer_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Customer_Contact_Phone__c</fullName>
    <description>GTMS-15999: to store the billing contact field phone</description>
    <formula>Customer_Contact__r.Phone</formula>
    <label>Customer Contact Phone</label>
    <type>Text</type>
</CustomField>