force-app/main/default/objects/Finance_Partner_Quote__c/fields/Customer_Shipping_Address__c.field-meta.xml
<CustomField>
    <fullName>Customer_Shipping_Address__c</fullName>
    <description>GTMS-15999: Created as part of 3PF Phase 2 project - 1/5/24</description>
    <label>Customer Shipping Address</label>
    <type>TextArea</type>
</CustomField>