force-app/main/default/objects/Finance_Partner_Quote__c/fields/Documents_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>Documents_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Documents Uploaded By Customer</label>
    <type>Checkbox</type>
</CustomField>