force-app/main/default/objects/Finance_Partner_Quote__c/fields/DUNS_Number__c.field-meta.xml
<CustomField>
    <fullName>DUNS_Number__c</fullName>
    <description>GTMS-9965 3PF Automation</description>
    <label>DUNS Number</label>
    <length>11</length>
    <type>Text</type>
</CustomField>