force-app/main/default/objects/Finance_Partner_Quote__c/fields/Expected_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Close_Date__c</fullName>
    <description>GTMS-9965  3PF automation</description>
    <label>Expected Close Date</label>
    <type>Date</type>
</CustomField>