force-app/main/default/objects/Finance_Partner_Quote__c/fields/Finance_Notes__c.field-meta.xml
<CustomField>
    <fullName>Finance_Notes__c</fullName>
    <description>GTMS-15999: Created as part of 3PF project</description>
    <inlineHelpText>This Field is Only visible to Deal Desk Team</inlineHelpText>
    <label>Finance Notes</label>
    <type>TextArea</type>
</CustomField>