force-app/main/default/objects/Finance_Partner_Quote__c/fields/Finance_Partner__c.field-meta.xml
<CustomField>
    <fullName>Finance_Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Finance Partner</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Is_Finance_Partner_Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Finance Partner Quotes (Finance Partner)</relationshipLabel>
    <relationshipName>Finance_Partner_Quotes1</relationshipName>
    <type>Lookup</type>
</CustomField>