force-app/main/default/objects/Finance_Partner_Quote__c/fields/Financing_Decision__c.field-meta.xml
<CustomField>
    <fullName>Financing_Decision__c</fullName>
    <label>Financing Decision</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
            <value>
                <fullName>Need More Info</fullName>
            </value>
            <value>
                <fullName>Pending - Under Partner Review</fullName>
            </value>
            <value>
                <fullName>Withdrawn</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
            <value>
                <fullName>Resubmit For Review</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>