force-app/main/default/objects/Finance_Partner_Quote__c/fields/Financing_Decision_Date__c.field-meta.xml
<CustomField>
    <fullName>Financing_Decision_Date__c</fullName>
    <label>Financing Decision Date</label>
    <type>DateTime</type>
</CustomField>