force-app/main/default/objects/Finance_Partner_Quote__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <label>3PF Notes to Sales</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>