force-app/main/default/objects/Finance_Partner_Quote__c/fields/Opportunity_owner_Email__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_owner_Email__c</fullName>
    <label>Opportunity Owner Email</label>
    <type>Email</type>
</CustomField>