force-app/main/default/objects/Finance_Partner_Quote__c/fields/Opportunity_Owner_Manager_Name__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Owner_Manager_Name__c</fullName>
    <formula>Opportunity__r.Owner.Manager.FirstName+&apos; &apos;+Opportunity__r.Owner.Manager.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Owner Manager Name</label>
    <type>Text</type>
</CustomField>