force-app/main/default/objects/Finance_Partner_Quote__c/fields/Opportunity_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Owner_Name__c</fullName>
    <formula>Opportunity__r.Owner.FirstName +&apos; &apos;+Opportunity__r.Owner.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Owner Name</label>
    <type>Text</type>
</CustomField>