force-app/main/default/objects/Finance_Partner_Quote__c/fields/Partner_Contact__c.field-meta.xml
<CustomField>
    <fullName>Partner_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>GTMS-16456: Added filter criteria for this field - 12/12/23</description>
    <label>Partner Contact</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Finance_Partner__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Finance Partner Quotes</relationshipLabel>
    <relationshipName>Finance_Partner_Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>