force-app/main/default/objects/Finance_Partner_Quote__c/fields/Preferred_Offer__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Offer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>GTMS-9971 : Based on “Preferred” finance decision, AE creates Samsara Order Form (“OF”) in Conga and OF is sent directly to Finance Partner automatically.</description>
    <label>Preferred Offer</label>
    <type>Checkbox</type>
</CustomField>