force-app/main/default/objects/Finance_Partner_Quote__c/fields/Response_Received__c.field-meta.xml
<CustomField>
    <fullName>Response_Received__c</fullName>
    <label>Response Received</label>
    <type>DateTime</type>
</CustomField>