force-app/main/default/objects/Finance_Partner_Quote__c/fields/Samsara_Rep_Manager__c.field-meta.xml
<CustomField>
    <fullName>Samsara_Rep_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>GTMS-9655 3PF Automation Flow</description>
    <label>Opportunity Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Finance_Partner_Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>