force-app/main/default/objects/Finance_Partner_Quote__c/fields/Subsidy_Amount__c.field-meta.xml
<CustomField>
    <fullName>Subsidy_Amount__c</fullName>
    <inlineHelpText>Name has been changed from &quot;Purchase Option&quot; to &quot;Subsidy Amount&quot; as per gtms-4014</inlineHelpText>
    <label>Subsidy Amount</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>