force-app/main/default/objects/Finance_Partner_Quote__c/fields/Term_Length__c.field-meta.xml
<CustomField>
    <fullName>Term_Length__c</fullName>
    <defaultValue>36</defaultValue>
    <description>The license term of the opportunity.
GTMS-16419: Updated label and Help Text - 12/12/23</description>
    <inlineHelpText>Opportunity term length. Changes require 3PF re-review; please resubmit for approval after updating.</inlineHelpText>
    <label>Requested Term Length</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>