force-app/main/default/objects/Finance_Partner_Quote__c/validationRules/Expiration_Date_VR.validationRule-meta.xml
<ValidationRule>
    <fullName>Expiration_Date_VR</fullName>
    <active>true</active>
    <description>GTMS-16451: Created as part of 3PF phase 2 project</description>
    <errorConditionFormula>AND(
				ISCHANGED(Expiration_Date__c),
				NOT(ISBLANK(Expiration_Date__c)),
				NOT(ISNULL(Expiration_Date__c)),
				ISPICKVAL(Financing_Decision__c,&apos;Approved&apos;),
				Expiration_Date__c &lt;=  TODAY() 
)</errorConditionFormula>
    <errorDisplayField>Expiration_Date__c</errorDisplayField>
    <errorMessage>Expiration Date must be a future date</errorMessage>
</ValidationRule>