force-app/main/default/objects/Finance_Partner_Quote__c/listViews/Declined.listView-meta.xml
<ListView>
    <fullName>Declined</fullName>
    <columns>NAME</columns>
    <columns>Financing_Decision__c</columns>
    <columns>Account__c</columns>
    <columns>Partner_Contact__c</columns>
    <columns>Submission_Date__c</columns>
    <columns>Opportunity_Owner_Name__c</columns>
    <columns>Opportunity_Owner_Manager_Name__c</columns>
    <columns>Balance_Due__c</columns>
    <columns>Expected_Close_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Financing_Decision__c</field>
        <operation>equals</operation>
        <value>Declined</value>
    </filters>
    <label>Declined</label>
</ListView>